--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ script:
 sudo: false
 after_success:
   - npm install -g codeclimate-test-reporter
-  - codeclimate-test-reporter < reports/coverage/lcov.info
+  - codeclimate-test-reporter < coverage/lcov.info
