--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
 before_script:
   - npm install
 script:
-  - npm test-ci
+  - npm test
 sudo: false
 after_success:
   - npm install -g codeclimate-test-reporter
