--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -2,3 +2,12 @@ engines:
   eslint:
     enabled: true
     channel: "eslint-3"
+  duplication:
+    enabled: true
+      config:
+        languages:
+          javascript:
+  fixme:
+    enabled: true
+  nodesecurity:
+    enabled: true
