--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -9,3 +9,10 @@ engines:
         javascript:
   fixme:
     enabled: true
+ratings:
+  paths:
+  - src/**
+  - "**.js"
+exclude_paths:
+  - src/**
+  - "**.spec.js"
