Fixing a typo in the index.js file and removing an unused package from package.json

--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
 		"dev-test": "gulp dev-test"
 	},
 
-	"dependencies": {
-		"weighted-random-object": "1.0.6"
-	},
+	"dependencies": { },
 	"peerDependencies": { },
 	"devDependencies": {
 
