Initial commit of pageable and gettable Mongoose plugins

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,14 @@ before_script:
 script:
   - npm test
 sudo: false
+addons:
+  apt:
+    sources:
+      - mongodb-upstart
+      - mongodb-3.0-precise
+    packages:
+      - mongodb-org-server
+      - mongodb-org-shell
 after_success:
   - npm install -g codeclimate-test-reporter
   - codeclimate-test-reporter < coverage/lcov.info
